--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -11,18 +11,18 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 header {
-  background-color: #000;
+  background-color: #ffffff;
   position: sticky;
   top: 0;
   z-index: 20;
 }
-header .logo img {
-  width: 180px;
-  padding: 10px;
+header nav{
+  display: flex;
+  justify-content: space-between;
 }
 header nav ul {
   display: flex;
-  justify-content: space-around;
+
 }
 nav ul li {
   display: flex;
@@ -33,7 +33,7 @@ nav li a {
   text-decoration: none;
   font-size: 20px;
   text-transform: uppercase;
-  color: #ffffff;
+  color: #000000;
 }
 .hero {
   display: flex;
