--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -10,32 +10,8 @@ body {
   background-color: #63f74f;
   font-family: Arial, Helvetica, sans-serif;
 }
-header {
-  background-color: #ffffff;
-  position: sticky;
-  top: 0;
-  z-index: 20;
-}
-header nav{
-  display: flex;
-  justify-content: space-between;
-}
-header nav ul {
-  display: flex;
 
-}
-nav ul li {
-  display: flex;
-  align-items: center;
-  list-style: none;
-}
-nav li a {
-  text-decoration: none;
-  font-size: 20px;
-  text-transform: uppercase;
-  color: #000000;
-}
-.hero {
+/* .hero {
   display: flex;
   background-image: url(../images/hero-bg.jpg);
   background-repeat: no-repeat;
@@ -90,7 +66,7 @@ nav li a {
   color: #fff;
   font-size: 70px;
   font-weight: bold;
-}
+} */
 .boxingcenter input {
   padding: 15px;
   margin: 90px 0 0 70px;
