--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -7,100 +7,129 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  background-color: #63f74f;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
-
-/* .hero {
-  display: flex;
+:root{
+  --white:#ffffff;
+  --black:#000000;
+  --main:#63f74f;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+.container {
+  padding: 0 15px;
+  margin: auto;
+}
+img {
+  max-width: 100%;
+}
+a{
+  text-decoration: none;
+}
+.hero {
+  height: 100vh;
   background-image: url(../images/hero-bg.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
+  background-size: 100% 100%;
+  position: relative;
 }
 .hero::before {
   content: "";
-  background-image: linear-gradient(#63f74f00, #63f74f);
   width: 100%;
   height: 100vh;
+  background-image: linear-gradient(#63f74f00, #63f74f);
   position: absolute;
 }
-.boxer {
+.hero .container {
   display: flex;
-  align-items: center;
-  text-transform: uppercase;
+  justify-content: space-between;
+}
+.hero .container .oxer {
   font-size: 90px;
   font-weight: bold;
   rotate: 90deg;
-  padding-right: 100px;
-  z-index: 10;
 }
-.boxer h1 {
-  color: #ffffff;
+.hero .container .oxer h1 {
+  color: var(--white);
 }
-.boxer span {
-  color: #63f74f;
+.hero .container .oxer h1 span {
+  color:var(--main);
 }
-.boxingcenter {
+.hero .container .center {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  z-index: 10;
+  flex-wrap: wrap;
+  gap: 70px;
+  z-index: 1;
 }
-.boxingcenter h2 {
-  color: #fff;
+.hero .container .boxingcenter {
+  text-align: center;
+}
+.hero .container .boxingcenter h2 {
+  color: var(--white);
   text-transform: uppercase;
   font-size: 70px;
-  margin-bottom: 50px;
 }
-.boxingcenter h2::after {
+.hero .container .boxingcenter h2::after {
   content: "";
-  border: 1px solid;
-  display: flex;
-  rotate: 90deg;
   width: 100px;
-  margin: 90px 0 0 90px;
+  display: block;
+  border: 1px solid;
+  rotate: 90deg;
+  margin: auto;
+  margin-top: 70px;
 }
-.boxingcenter span {
-  margin-left: 35%;
-  color: #fff;
+.hero .container .boxingcenter span {
+  color: var(--white);
   font-size: 70px;
   font-weight: bold;
-} */
-.boxingcenter input {
-  padding: 15px;
-  margin: 90px 0 0 70px;
+}
+.hero .container .boxingcenter a {
   width: 150px;
+  display: block;
+  text-align: center;
+  background-color: var(--black);
+  color: var(--white);
   border-radius: 30px;
-  border: none;
-  background-color: #000000;
-  color: #ffffff;
-  font-size: large;
-  margin-top: 50px;
-  text-transform: capitalize;
+  padding: 12px 30px;
+  margin: auto;
+  margin-top: 90px;
+}
+.hero .container .boxingcenter a:hover {
+  background-color: var(--white);
+  color: var(--black);
   transition: 0.5s;
 }
-.boxingcenter input:hover {
-  background-color: #fff;
-  color: #000;
+.hero .container .scroll_raiht_lift {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 15px;
+  z-index: 1;
 }
-.scroll-raiht_lift {
-  position: absolute;
-  right: 30px;
-  top: 50%;
-}
-.scroll-raiht_lift img {
-  background-color: #63f74f;
-  padding: 20px;
-  height: 15px;
-  width: 15px;
+.hero .container .scroll_raiht_lift a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70px;
+  height: 70px;
+  background-color: var(--main);
   border-radius: 50%;
-  margin-bottom: 5px;
 }
-.scroll-raiht_lift img:hover {
-  background-color: #fff;
-}
-.about-class img {
+
+/* .about-class img {
   width: 1250px;
   display: flex;
   justify-self: end;
@@ -484,4 +513,4 @@ iframe {
   height: 25px;
   margin: 10px;
   padding: 10px;
-}
+} */
